--- a/src/Detail.scss
+++ b/src/Detail.scss
@@ -1,3 +1,17 @@
+$메인칼라 : black;
+
+.wow-enter {
+  opacity : 0
+}
+
+.wow-enter-active {
+  opacity : 1;
+  transition : all 500ms;
+}
+
+.red {
+  color : $메인칼라;
+}
 @mixin 함수() {
     background : #eeeeee;
     padding : 15px;
@@ -18,3 +32,4 @@
   .my-alert p {
     margin-bottom : 0;
   }
+
